--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,7 +4,7 @@
     <title>My Website</title>
   </head>
   <body>
-    <h1>Welcome to My Website</h1>
+    <h1>My Travel Blog</h1>
     <a href="login.html"><button>Login</button></a>
   </body>
 </html>
