--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"
+    />
+    <title>Travel Blog</title>
   </head>
   <body>
     <h1>My Travel Blog</h1>
-    <a href="login.html"><button>Login</button></a>
+    <a href="admin.php"><button>Login</button></a>
   </body>
 </html>
