Displaying countries and cities complete

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -30,11 +30,11 @@
           <header>
             <h2>Country List</h2>
 
-            <!-- Search -->
+            <!-- Country Search -->
             <input
               type="search"
-              id="search"
-              name="search"
+              id="country_search"
+              name="country_search"
               placeholder="Filter by Country"
             />
           </header>
