empty <dialog> for the modal

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -55,6 +55,9 @@
 
           <!-- Country information -->
           <article id="country_info" class="hidden scroll"></article>
+
+          <!-- Modal -->
+          <dialog id="image-info-modal"></dialog>
         </div>
       </div>
     </body>
